Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-117658

QWebEnginePage property url is missing NOTIFY, not-usable from QML

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.5.5, 6.6.1, 6.7.0 FF
    • 6.5.2
    • WebEngine
    • None
    • All
    • 95c13aa9b (dev), c3055d618 (6.6), e09af22df (6.5)

    Description

      QWebEnginePage url property is missing NOTIFY. While it has the urlChanged signal, it is missing from the Q_PROPERTY declaration.

      This makes this class not usable from QML. Whenever you try to bind to this property

      Control {
          property var page: SomeAttachedProperty.page
          property url url: page.url 
      }

      you get error in logs:

      QQmlExpression: ...
      depends on non-NOTIFYable properties:
      QWebEnginePage::url
      

       

      QWebEnginePage class has urlChanged dignal, but is is not declared as NOTIFY for url property:

      class Q_WEBENGINECORE_EXPORT QWebEnginePage : public QObject
      {
          ...
          Q_PROPERTY(QUrl url READ url WRITE setUrl)
          ...
      Q_SIGNALS:
          ...
          void urlChanged(const QUrl &url);
          ...
      }

       
       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            qt_webengine_team Qt WebEngine Team
            jskowron Jakub Skowron
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes