Add NOTIFY in QWebEnginePage property url definition

- Added missing NOTIFY in QWebEnginePage property url.

Fixes: QTBUG-117658
Pick-to: 6.6 6.5
Change-Id: I58c8161e41f02ab78c829fd9ef588506a55f6fd3
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Michal Klocek <michal.klocek@qt.io>